# zoomy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  INSTALL.txt  LOGGING.md  README.md  README.txt  TODOstupid.txt  genindex.html  index.html  main.html  main.py  nohup.out  objects.inv  py-modindex.html  pyproject.toml  pyzui.html  pyzui.sh  pyzui_config_example.json  search.html  searchindex.js
.github/workflows/: docs.yml
_modules/: index.html  main.html
_sources/: index.rst.txt  pyzui.rst.txt
_sources/benchmarksdocumentation/: converterbenchmark.rst.txt
_sources/contributionguidelines/: contributiongiudelines.rst.txt
_sources/gettingstarted/: installation.rst.txt
_sources/pyzui/: converter_runner.rst.txt  converterrunner.rst.txt  dynamictileprovider.rst.txt  physicalobject.rst.txt  ppm.rst.txt  tile.rst.txt  tilecache.rst.txt  vipsconverter.rst.txt
_sources/technicaldocumentation/: convertersystem.rst.txt  logging.rst.txt  objectsystem.rst.txt  projectstructure.rst.txt  tiledmediaobject.rst.txt  windowsystem.rst.txt
_sources/usageinstructions/: programconfiguration.rst.txt  userinterface.rst.txt
_static/: custom.css
benchmarksdocumentation/: converterbenchmark.html  qzuibenchmark.html
contributionguidelines/: contributiongiudelines.html  contributionguidelines.html
data/: home.pzs
docs/source/: conf.py  contributiongiudelines.rst  index.rst  installation.rst  logging.rst  main.rst  projectstructure.rst  pyzui.converter.rst  pyzui.dialogwindows.rst  pyzui.dynamictileprovider.rst  pyzui.mainwindow.rst  pyzui.mediaobject.rst  pyzui.ppm.rst  pyzui.rst  pyzui.statictileprovider.rst  pyzui.stringmediaobject.rst  pyzui.tilecache.rst  pyzui.tiledmediaobject.rst  pyzui.tilemanager.rst  pyzui.tiler.rst  pyzui.tilestore.rst  tilingsystem.rst  usageinstructions.rst  userinterface.rst
gettingstarted/: installation.html
pyzui/: .coverage  __init__.py  config.py  convert.sh  converter.html  converter.py  converter_runner.html  converterrunner.html  dialogwindows.py  dynamictileprovider.html  dynamictileprovider.py  ferntileprovider.html  ferntileprovider.py  globalmosaictileprovider.py  logger.py  magickconverter.py  mainwindow.py  mandeltileprovider.py  mediaobject.html  mediaobject.py  nohup.out  osmtileprovider.py  pdfconverter.html  pdfconverter.py  physicalobject.html  physicalobject.py  ppm.html  ppm.py  qzui.html  qzui.py  scene.html  scene.py  statictileprovider.html  statictileprovider.py  stringmediaobject.html  stringmediaobject.py  svgmediaobject.html  svgmediaobject.py  tile.html  tile.py  (+16 more)
pyzui/backup/: __init__.py  backupmanager.py
pyzui/converters/: __init__.py  converter.py  converter_runner.py  converterrunner.py  pdfconverter.py  vipsconverter.py  webkitconverter.py
pyzui/objects/: physicalobject.py
pyzui/tileproviders/: __init__.py  dynamictileprovider.py  ferntileprovider.py  globalmosaictileprovider.py  mandeltileprovider.py  osmtileprovider.py  statictileprovider.py  tileprovider.py
pyzui/tilestore/: TILESTORE_CLEANUP.md  __init__.py  cleanuptilestore.py  tilestore.py
pyzui/tilesystem/: __init__.py  tile.py  tilemanager.py
pyzui/windows/: __init__.py  mainwindow.py
scripts/: bump_version.py
technicaldocumentation/: convertersystem.html  logging.html  objectsystem.html  projectstructure.html  readingdocumentation.html  tiledmediaobject.html  tilingsystem.html  windowsystem.html
test/: __init__.py
test/benchmarks/: benchmark.py  converterbenchmark.py  qzui_benchmark.py
test/integrationtest/: .coverage  GUI_INTEGRATION.md  __init__.py  gui_integration.py  test_autosave_integration.py  test_cache_provider_integration.py  test_concurrent_access.py  test_concurrent_stress.py  test_converter_pipeline.py  test_converterrunner_integration.py  test_copy_paste_integration.py  test_font_thread_safety_integration.py  test_group_deletion.py  test_logging_integration.py  test_mp_context_safety.py  test_parallel_rendering_integration.py  test_scene_import_integration.py  test_scene_persistence.py  test_scene_selection_save_integration.py  test_svg_dialog_integration.py  test_svg_embedding_complete.py  test_svg_embedding_simple.py  test_tilemanager_integration.py  test_tiling_pipeline.py  test_zoom_limits_integration.py
test/unittest/: .coverage  conftest.py  test_all_dynamictileproviders.py  test_config_manager.py  test_converter.py  test_dialogwindows.py  test_logger.py  (+27 more)
testingdocumentation/: integrationtest.html  unittest.html
usageinstructions/: programconfiguration.html  userinterface.html
(+227 files in other folders)
